<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connect.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/backgroud"
    android:gravity="center_horizontal"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="37dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:background="#fdb6b6"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:paddingLeft="2dp" />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"

        android:background="#fdb6b6"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fdb6b6"

        android:text="@string/login"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/not_registered"

            android:textColor="#000" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textColor="#04ea00"
            android:text="@string/register"

             />
    </LinearLayout>

</LinearLayout>